<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/askus_root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_block_padding" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp" 
        android:text="@string/help_dialog_url"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_dialog_question"
        android:gravity="center" />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_dialog_feature"
        android:layout_marginBottom="20dp"
        android:gravity="center" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_dialog_comment"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <Button android:id="@+id/sitebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_dialog_sitebutton"
        android:gravity="center" /> 

    <Button android:id="@+id/emailbutton" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_dialog_emailbutton"
        android:gravity="center" /> 
    
    <!-- temporarily set to GONE cause I'm not sure we need it -->
    <Button android:id="@+id/closebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="@dimen/short_block_padding"
        android:paddingRight="@dimen/short_block_padding"
        android:text="@string/help_dialog_closebutton"
        android:gravity="center"
        android:visibility="gone"/> 

</LinearLayout> 



