<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_background" >
  
    <!-- TITLE BAR -->
    <RelativeLayout android:id="@+id/edit_tag_heading"
        style="@style/heading_bar">

        <!-- HEADING -->
        <TextView android:id="@+id/edittag_heading_text"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_centerInParent="true"
            style="@style/heading_text" />

    </RelativeLayout>

    <LinearLayout
            style="@style/frame_block"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp" >

            <!-- the tag name block -->
            <TextView 
                style="@style/normal_display_text"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="10dp"
                android:text="@string/edittag_name_caption" />
            <EditText android:id="@+id/edit_tag_nametext"
                style="@style/default_edittext"
                android:layout_marginTop="4dp"
                android:imeOptions="actionDone"
                android:hint="@string/edittag_name_hint" />
     
            <!-- the tag description block -->
            <TextView 
                style="@style/normal_display_text"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="10dp"
                android:text="@string/edittag_description_caption" />
            <EditText android:id="@+id/edit_tag_descriptiontext"
                style="@style/default_edittext"
                android:layout_marginTop="4dp"
                android:lines="2"
                android:minLines="2"
                android:gravity="top|left"
                android:imeOptions="actionDone"
                android:hint="@string/edittag_description_hint" />
     
    </LinearLayout>       

</LinearLayout>

